修改了一些配置

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,13 +3,16 @@
 # http = 0.0.0.0:8080
 
 # for nginx 当配合nginx使用时用这个，uwsgi和nginx是通过socket通信的
-socket = /tmp/uwsgi.sock  ; Unix 域套接字（推荐）
+socket = /tmp/uwsgi.sock
 
 # the base directory (full path) 根目录
 chdir = /home/zhangwn2/source/2025FDCS/
 
 # Django wsgi file 以python包的格式导入
 module = FDCS.wsgi
+
+# Python 虚拟环境
+home = /home/zhangwn2/py_venv/venv/
 
 # process-related settings
 # master
@@ -23,6 +26,13 @@ pidfile = /home/zhangwn2/source/2025FDCS/projectlogs/uwsgi.pid
 logto = /home/zhangwn2/source/2025FDCS/projectlogs/uwsgi.log
 log-level = DEBUG  ; 设置日志级别为 DEBUG
 # ... with appropriate permissions - may be needed
-chmod-socket    = 664
+chmod-socket    = 660
 # clear environment on exit
 vacuum          = true
+
+# 在接收到 TERM 信号时优雅关闭 (而不是立即杀死)
+die-on-term = true
+
+# 静态文件映射 (虽然通常推荐由 Nginx 处理，但 uWSGI 也可以)
+# static-map = /static=/path/to/your/project/staticfiles
+# static-map2 = /media=/path/to/your/project/mediafiles
